[workspace]
resolver = "2"

members = [
    "common",
    "kuksa",
    "sdv",
    "databroker-examples",
    "kuksa_val_v2",
    "databroker-proto",
]

[workspace.dependencies]
databroker-proto = { path = "databroker-proto" }
kuksa-common = { path = "common" }
kuksa-val-v1 = { path = "kuksa" }
kuksa-val-v2 = { path = "kuksa_val_v2" }
sdv-databroker-v1 = { path = "sdv" }

# prost has no features
prost = "0.12.6"
# prost-types has no features
prost-types = "0.12.6"
# tokio does not enable features by default
tokio = "1.17.0"
# tokio-stream has no features
tokio-stream = "0.1.8"
tonic = { version = "0.11.0", default-features = false }
tonic-build = { version = "0.8", default-features = false }
