[package]
name = "databroker-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.1", features = ["full"] }
tokio-stream = "0.1.8"
tonic = { workspace = true, features = ["transport", "channel"] }
prost-types = { workspace = true }
kuksa-rust-sdk = { workspace = true }
