[package]
name = "kuksa-rust-sdk"
version = "0.6.0-dev.0"
authors = ["Eclipse KUKSA Project"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
databroker-proto = { workspace = true }
tonic = { workspace = true, features = ["transport", "channel"] }
tokio = { workspace = true, features = [
    "macros",
] }
tokio-stream = { workspace = true, features = ["sync"] }
http = "0.2.8"
log = "0.4"
env_logger = "0.11"
prost-types = { workspace = true }
test-tag = "0.1.4"
prost = { workspace = true }

[dev-dependencies]
prost = { workspace = true }
prost-types = { workspace = true }

[features]
# default = ["tls"] # from sdv module?
tls = ["tonic/tls"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
