[package]
name = "kuksa-rust-sdk"
version = "0.1.1"
authors = ["Eclipse KUKSA Project"]
edition = "2021"
license = "Apache-2.0"
description = "The Rust SDK for the Eclipse KUKSA Databroker."
homepage = "https://eclipse-kuksa.github.io/kuksa-website/"
repository = "https://github.com/eclipse-kuksa/kuksa-rust-sdk"
readme = "../README.md"

[dependencies]
futures-core = "0.3.31"
http = "0.2.8"
log = "0.4"
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true, features = ["transport", "channel", "codegen", "prost"] }

[dev-dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
test-tag = "0.1.4"

[build-dependencies]
tonic-build = { workspace = true, features = ["transport", "prost"] }
protobuf-src = "1.1.0"

[features]
# default = ["tls"] # from sdv module?
tls = ["tonic/tls"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
